# cirogilmarcamposfilho

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  GRAPH_GUIDE.md  README.md  orquestra.md  playwright.config.ts  pyproject.toml
.agent/: ARCHITECTURE.caveman.md  ARCHITECTURE.md  (+1 more)
alunos/Caio-barbieri/dashboard/: pyproject.toml
alunos/Caio-barbieri/dashboard/app/api/: routes.py
alunos/Caio-barbieri/dashboard/app/cli/: download_image.py  fetch_player.py  fetch_statsbomb.py
alunos/Caio-barbieri/dashboard/app/fetchers/: sofascore.py
alunos/Caio-barbieri/dashboard/app/frontend/: index.html
alunos/Caio-barbieri/dashboard/app/infra/: database.py
alunos/Caio-barbieri/dashboard/app/services/: plotter.py
alunos/Caio-barbieri/dashboard/app/tests/: test_database.py
alunos/Leonardo_barbosa/dashboard/: pyproject.toml
alunos/Leonardo_barbosa/dashboard/app/: main.py
alunos/Leonardo_barbosa/dashboard/app/api/: routes.py
alunos/Leonardo_barbosa/dashboard/app/fetchers/: sofascore.py
alunos/Leonardo_barbosa/dashboard/app/frontend/: index.html
alunos/Leonardo_barbosa/dashboard/app/infra/: database.py
alunos/Leonardo_barbosa/dashboard/app/services/: plotter.py
alunos/Leonardo_barbosa/dashboard/app/tests/: test_api.py
alunos/Leonardo_barbosa/dashboard/data/: sofascore.db
alunos/Leonardo_barbosa/dashboard/data/processed/: defensive_stats.csv  goalkepper_stats.csv  passing_stats.csv  standard_stats.csv  standard_stats_a  standard_stats_b  stats_2024_Serie_A.csv
alunos/Leonardo_barbosa/dashboard/data/raw/: Lanus.csv  MatchEvents_Full.csv  Player_Standard_Stats_2024_Serie_A.csv  Player_Standard_Stats_2024_Serie_B.csv  defensive_stats.csv  events_teste.csv  goalkepper_stats.csv  lanus_defensive_act.csv  lanus_goal_shot_creation.csv  lanus_miscellaneous.csv  lanus_pass_type.csv  lanus_passing.csv  lanus_playing_time.csv  lanus_possession.csv  lanus_shooting.csv  lanus_stats.csv  passing_stats.csv  standard_stats.csv  stats_2024_Serie_B.csv  times_br.csv
alunos/Leonardo_barbosa/dashboard/data/sofascore/: average_positions.json  match_info.json  shotmap.json
alunos/Leonardo_barbosa/dashboard/data/sofascore_player/: player_statistics.json  rating_breakdown.json  shotmap.json
alunos/Leonardo_barbosa/dashboard/data/sofascore_player_124992/: heatmap.json  rating_breakdown.json  statistics.json
alunos/Leonardo_barbosa/dashboard/data/sofascore_player_1590853/: rating_breakdown.json
alunos/Leonardo_barbosa/dashboard/docs/: README.md
alunos/Leonardo_barbosa/dashboard/scripts/: fetch_match_data.py  fetch_via_browser.py
alunos/ciro-gilmar-campos-filho-pasta/desafio-3-fbref/: README.md  add_charts.py  adjust_eda.py  fix_palette.py  pyproject.toml
alunos/ciro-gilmar-campos-filho-pasta/desafio-3-fbref/notebooks/: exploracao.html  exploracao.ipynb
alunos/ciro-gilmar-campos-filho-pasta/desafio-3-fbref/src/: fbref_extract.py
alunos/joao-vitor-machado-de-mello/statsbomb_aula/: README.md  competitions.json  pyproject.toml
alunos/joao-vitor-machado-de-mello/statsbomb_aula/docs/: DATA_DICTIONARY.md  TECH_LEAD_ANALYSIS.md
alunos/joao-vitor-machado-de-mello/statsbomb_aula/scripts/: build_dashboard_data.py  generate_flag_assets.py
alunos/joao-vitor-machado-de-mello/statsbomb_aula/specs/: armazenamento-processado-parquet.md  banco-compacto-dashboard.md  correcao-destino-penaltis.md  desafio-2-ajudas-modal-penaltis.md  desafio-2-dashboard-tatico.md  desafio-2-graficos-progressao-selecao.md  desafio-2-interacoes-metricas-traducao.md  desafio-2-mapa-penaltis-contraste.md  desafio-2-mapas-statsbomb-filtro-jogador.md  desafio-2-penaltis-posicoes.md  desafio-2-per90-radar-media-progressao.md  desafio-2-periodos-jogadores-bandeiras.md  desafio-2-placar-gols-bandeiras-reais.md  desafio-2-sofascore-interativo.md  desafio-2-tema-qatar-2022.md
alunos/joao-vitor-machado-de-mello/statsbomb_aula/tests/: test_compact_penalty_destinations.py  test_metrics_contract.py  test_processed_data_pipeline.py
analise-dados/: pyproject.toml
analise-dados/01-introducao-python/: Curso_Python_CBF.ipynb  Fundamentos_de_Ciência_de_Dados_Pratica.ipynb
analise-dados/02-analise-exploratoria/: Analise_Brasil_Egito.ipynb  Maiores_Chutadores.ipynb  Scatter_plot_brasileirao25_32rodada.ipynb  brasileirao_EDA copy.ipynb  brasileirao_EDA.ipynb  brasileirao_EDA_SerieB.ipynb  notebook_code.py
analise-dados/03-visualizacao-campo/: Beeswarms.ipynb  Passmaps.ipynb  Player actions grid.ipynb  Touchmap.ipynb  plot_pass_network_2 (1).ipynb  plot_pass_network_2.ipynb  radar.ipynb  sofascore.ipynb
(+4527 files in other folders)
