[project]
name = "aula-cbf"
version = "2.0.0"
description = "CBF Academy — Monorepo de projetos didáticos de Python para Dados"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.41.0",
    "playwright>=1.58.0",
    "jupyter>=1.1.0",
    "pandas>=3.0.1",
    "numpy>=2.4.3",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "mplsoccer>=1.6.1",
    "requests>=2.32.5",
    "pillow>=12.1.1",
    "httpx>=0.28.1",
    "scikit-learn>=1.3.0",
    "tabulate>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.5.0",
    "graphifyy",
]

[tool.uv.workspace]
members = ["dashboard", "analise-dados"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["dashboard/app/tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["artifacts", "dashboard/app/frontend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S"]
ignore = ["E203", "E501", "S101", "S608", "S112", "S110", "S701", "S311", "S324", "S108", "E402", "E701", "S105"]

[tool.ruff.lint.per-file-ignores]
"dashboard/app/tests/**" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
