[project]
name = "analise-dados"
version = "1.0.0"
description = "Análise de dados da CBF Academy — notebooks e scripts didáticos"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.0",
    "pandas>=3.0.1",
    "numpy>=2.4.3",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "mplsoccer>=1.6.1",
    "requests>=2.32.5",
    "pillow>=12.1.1",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
