[project]
name = "dashboard"
version = "2.0.0"
description = "SofaScore Player Dashboard — football analytics platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "playwright==1.58.0",
    "matplotlib>=3.10.9",
    "mplsoccer>=1.6.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "requests>=2.32.5",
    "pillow>=12.1.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
