[project]
name = "desafio-3-fbref"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "nbconvert>=7.17.1",
    "pandas>=3.0.1",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
    "soccerdata>=1.9.0",
]
